# sec-report-kit

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  bandit-gaps-vs-sast-open-source-tools.md  check_assets.py  class_index.html  function_index.html  index.html  pyproject.toml  requirements.txt  status.json  z_04615a1dd1ce4db0___init___py.html  z_04615a1dd1ce4db0_bandit_py.html  z_04615a1dd1ce4db0_checkov_py.html  z_04615a1dd1ce4db0_codeql_py.html  z_04615a1dd1ce4db0_gitleaks_py.html  z_04615a1dd1ce4db0_osv_scanner_py.html  z_04615a1dd1ce4db0_pip_audit_py.html  z_04615a1dd1ce4db0_semgrep_py.html  z_04615a1dd1ce4db0_tfsec_py.html  z_04615a1dd1ce4db0_trivy_py.html  z_04615a1dd1ce4db0_trufflehog_py.html  z_513b94261226dc0a___init___py.html  z_513b94261226dc0a_normalize_py.html  z_513b94261226dc0a_summarize_py.html  z_79d49abff220d1e3___init___py.html  z_79d49abff220d1e3___main___py.html  z_79d49abff220d1e3_cli_py.html  z_79d49abff220d1e3_models_py.html  z_b5cb2d0622dcf19f___init___py.html  z_b5cb2d0622dcf19f_html_renderer_py.html  z_dc88a0f48bfec113___init___py.html  z_dc88a0f48bfec113_server_py.html
scripts/: download_safety_db.bat  download_safety_db.py  download_safety_db.sh  install_external_clis.py  install_tools.bat  install_tools.sh  mcp_add_workspace_filesystem.bat  mcp_add_workspace_filesystem.sh  mcp_add_workspace_filesystem_help.md  render_bandit_html.bat  render_bandit_html.sh  render_checkov_html.bat  render_checkov_html.sh  render_codeql_html.bat  render_codeql_html.sh  render_consolidated_html.bat  render_consolidated_html.sh  render_gitleaks_html.bat  (+41 more)
(+31 files in other folders)
